--- a/PracticeSet3/style.css
+++ b/PracticeSet3/style.css
@@ -1,6 +1,24 @@
-div{
-    height: 100px;
-    width: 100px;
-    background-color: green;
-    border-radius: 50%;
+* {
+    padding: 0;
+    margin: 0;
+    color: white;
+}
+
+#navbar {
+    height: 60px;
+    background-color: black;
+}
+
+button{
+    background-color : #f08804;
+}
+
+#logo {
+color: #f08804;
+font-size: 25px;
+}
+
+a {
+    margin-right: 180px;
+    text-decoration: none;
 }
